# azagon

./: CMakeLists.txt  Config.cmake.cfg  README.md
dataObject/: CMakeLists.txt
dataObject/include/dataObject/: any.hpp  core.hpp  dict.hpp  dict_impl.hpp  print.hpp  string.hpp
dataObject/src/: string.cpp
docs/: CMakeLists.txt  Doxyfile.in  main.dox
fileSystem/: CMakeLists.txt
fileSystem/include/fileSystem/: fileSystem.hpp
fileSystem/src/: file.cpp  fileExplorer.cpp  fileFunctions.cpp  jsonFile.cpp  textFile.cpp
formatter/: CMakeLists.txt
html/html/: annotated.html  annotated_dup.js  any_8cpp_source.html  any_8hpp_source.html  arithmetic_8cpp_source.html  arithmetic_8hpp_source.html  bool_8cpp_source.html  bool_8hpp.html  bool_8hpp__dep__incl.map  bool_8hpp__dep__incl.md5  bool_8hpp__incl.map  bool_8hpp__incl.md5  bool_8hpp_source.html  classdata_object_1_1_any-members.html  classdata_object_1_1_any.html  classdata_object_1_1_any.js  classdata_object_1_1_arithmetic_object-members.html  classdata_object_1_1_arithmetic_object.html  classdata_object_1_1_bool-members.html  classdata_object_1_1_bool.html  classdata_object_1_1_data_object-members.html  classdata_object_1_1_data_object.html  classdata_object_1_1_data_object.js  classdata_object_1_1_data_object__inherit__graph.map  classdata_object_1_1_data_object__inherit__graph.md5  classdata_object_1_1_dict-members.html  classdata_object_1_1_dict.html  classdata_object_1_1_dict_item-members.html  classdata_object_1_1_dict_item.html  classdata_object_1_1_dict_item.js  classdata_object_1_1_dict_item__coll__graph.map  classdata_object_1_1_dict_item__inherit__graph.md5  classdata_object_1_1_dict_iterator-members.html  classdata_object_1_1_dict_iterator.html  classdata_object_1_1_dict_iterator.js  classdata_object_1_1_dict_iterator__coll__graph.md5  classdata_object_1_1_dict_iterator__inherit__graph.map  classdata_object_1_1_double-members.html  classdata_object_1_1_double.html  classdata_object_1_1_float-members.html  (+301 more)
html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  files_1.js  (+35 more)
logSystem/: CMakeLists.txt
logSystem/include/logSystem/: core.hpp  logSystem.hpp  logSystemClass.hpp  print.hpp
logSystem/src/: logSystem.cpp  logSystemClass.cpp
threadSystem/: CMakeLists.txt
threadSystem/include/formatter/: threadSystem.hpp
threadSystem/include/threadSystem/: threadSystem.hpp
threadSystem/src/: threadSystem.cpp
timeSystem/: CMakeLists.txt
timeSystem/src/: datetime.cpp
